2019-05-24 Massimo Manghi <mxmanghi@apache.org>
    * src/mod_rivet_ng/rivetCore.c: Add Tcl_DecrRefCnt after
    RivetCache_StoreScript as this function itself calls
    Tcl_IncrRefCnt to preserve the Tcl_Obj with the script code
    
2019-04-13 Massimo Manghi <mxmanghi@apache.org>
    * doc/xml/commands.xml: Correct wrong header in ::rivet::http_accept code example

2019-04-12 Massimo Manghi <mxmanghi@apache.org>
    * INSTALL: wrong references corrected

2019-02-19 Massimo Manghi <mxmanghi@apache.org>
    * .appveyor.yml: merging from master in order to have new tags generate
    artifacts

2019-02-16 Georgios Petasis <petasisg@apache.org>
    * .appveyor.yml: Added support for creating a zip with the installed rivet
    files (both module and library), and create an artifact. If a tag is added
    (in all branches), the zip will be added to the release.

2019-01-21 Massimo Manghi <mxmanghi@apache.org>
    * src/rivet.h: Add error message buffer size definition (was still hardcoded
    here and there)
    * src/mod_rivet_ng/rivetCore.c,rivet_worker_mpm.c: hardcoded buffer size
    into their correct macro definitions

2019-01-14 Massimo Manghi <mxmanghi@apache.org>
    * src/mod_rivet_ng/rivetCore.c: add experimental ::rivet::thread_id
   command

2019-01-05 Massimo Manghi <mxmanghi@apache.org>
    * doc/: merging from 3.1 fixes to various broken docbook elements
    and new entities to external resources' URLs

2018-12-24 Georgios Petasis <petasisg@apache.org>
    * README.md: Added badges also for the GitHub fork at:
    https://github.com/petasis/tcl-rivet.

    * .appveyor.yml: Enhancements to not rely on hard-coded paths.

2018-12-23 Massimo Manghi <mxmanghi@apache.org>
    * cmake/CMakeLists.txt: starting with rivet 3 we need Tcl > 8.6.1

2018-12-20 Georgios Petasis <petasisg@apache.org>
    * cmake/CMakeLists.txt: Set policy behaviour of CMP0074, only if policy is
    defined (i.e. cmake version >= 3.12).

2018-12-19 Georgios Petasis <petasisg@apache.org>