@@ -1,3 +1,6 @@
+2019-06-25 Massimo Manghi <mxmanghi@apache.org>
+    * : Single thread exit implementation for mod_rivet 3.2
+
 2019-05-24 Massimo Manghi <mxmanghi@apache.org>
     * src/mod_rivet_ng/rivetCore.c: Add Tcl_DecrRefCnt after
     RivetCache_StoreScript as this function itself calls
